implement sort activity list
